--- a/29531-h/29531-h.htm
+++ b/29531-h/29531-h.htm
@@ -1791,7 +1791,7 @@ Through the tumultuous night of London,<br>
 How the Spring calls to us, here in the city,<br>
 &nbsp;&nbsp;&nbsp;&nbsp; Calls to the heart from the heart of a lover!</p>
 
-<p>Cool the wind blows, fresh in our facet,<br>
+<p>Cool the wind blows, fresh in our faces,<br>
 &nbsp;&nbsp;&nbsp;&nbsp; Cleansing, entrancing,<br>
 After the heat and the fumes and the footlights,<br>
 &nbsp;&nbsp;&nbsp;&nbsp; Where you dance and I watch your dancing.</p>
